--- a/index.css
+++ b/index.css
@@ -19,6 +19,10 @@ body {
   background-image: url(pattern-background-desktop.svg) ;
   background-repeat: no-repeat;
   background-size: contain;
+  font-family: "Red Hat Display", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500 700 900;
+  font-style: normal;
 }
 .center {
   display: grid;
